# library

./: .editorconfig  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: github-actions-demo.yml
firstlib/: book.py  main.py
firstlib/api/: book.py
firstlib/core/: authors.py  book.py  errors.py  publishers.py
firstlib/infra/: in_memory.py
firstlib/infra/fastapi/: __init__.py  authors.py  book.py  bookcreaterequest.py  books.py  dependable.py  fake.py  publishers.py  response.py
firstlib/infra/http/: __init__.py  fluent.py
firstlib/runner/: __main__.py  cli.py  factory.py
tests/: client.py  conftest.py
tests/unit/: client.py  fake.py  test_authors.py  test_book.py  test_books.py  test_publishers.py
tests/unit/api/: test_book.py
tests/unit/fastapi/: conftest.py  fake.py  test_authors.py  test_book.py  test_books.py  test_publishers.py
